--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-argparse
-tqdm
-cryptography
-debugpy
-pytest
-pyinstaller
+cryptography>=45.0.0
+tqdm>=4.67.1
+pydantic>=2.10.3
+rich>=13.9.4
+typer>=0.15.1
+pytest>=8.3.4
+pytest-cov>=6.0.0
+black>=24.10.0
+isort>=5.13.2
+flake8>=7.1.1
+mypy>=1.13.0
