--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,21 +3,29 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "noki-dumper"
-version = "1.0.0"
-description = "Extrator de dados para Albion Online"
-authors = [{ name = "Noki Team" }]
-license = { text = "GPL-3.0" }
-requires-python = ">=3.12"
+requires-python = ">=3.13"
+name = "noki-bin-dumpper"
+version = "1.0.2"
+description = "Albion Online Bin Dumper"
+authors = [{name = "Brendown Ferreira", email = "br3n0k@gmail.com"}]
+license = { text = "Freeware" }
 dependencies = [
-    "rich",
-    "pycryptodomex",
+    "cryptography",
+    "tqdm",
     "pydantic",
-    "tqdm"
+    "rich",
+    "typer",
+    "pytest",
+    "pytest-cov",
+    "black",
+    "isort",
+    "flake8",
+    "mypy",
+    "pyinstaller"
 ]
 
 [project.scripts]
-noki = "noki.core.program:main"
+noki = "main:main"
 
 [tool.setuptools]
 packages = ["noki"]
