--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-cryptography>=44.0.0
-tqdm>=4.67.1
-pydantic>=2.10.3
-rich>=13.9.4
-typer>=0.15.1
-pytest>=8.3.4
-pytest-cov>=6.0.0
-black>=24.10.0
-isort>=5.13.2
-flake8>=7.1.1
-mypy>=1.13.0
+# Dependências principais
+pathlib>=1.0.1
+rich>=13.3.0
+tqdm>=4.64.1
+pydantic>=2.0.0
+requests>=2.28.0
+packaging>=23.0
+
+# Dependências de desenvolvimento
+pytest>=7.0.0
+pytest-cov>=3.0.0
+pyinstaller>=5.13.0 
