--- a/.github/workflows/test_and_release.yml
+++ b/.github/workflows/test_and_release.yml
@@ -29,8 +29,7 @@ jobs:
     - name: Instalar dependências
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e .
-        python -m pip install pytest pytest-cov
+        python -m pip install
       shell: pwsh
     
     - name: Criar diretórios para teste
