--- a/.github/workflows/test_and_release.yml
+++ b/.github/workflows/test_and_release.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Instalar dependências
       run: |
         python -m pip install --upgrade pip
-        python -m pip install
+        python -m pip install -e .
       shell: pwsh
     
     - name: Criar diretórios para teste
@@ -75,7 +75,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -e .
-        python -m pip install pyinstaller
       shell: pwsh
     
     - name: Construir executável
